[project]
name = "clip-rsiccformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.13.0",
    "imageio>=2.37.0",
    "matplotlib>=3.10.1",
    "numpy==1.26.0",
    "opencv-python>=4.11.0.86",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "clip4cc[cu124]",
    "tqdm>=4.67.1",
    "pip>=24.3.1",
    "uv==0.6.14",
    "boto3>=1.37.36",
    "requests>=2.32.3",
    "pandas>=2.2.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124"},
]
torchvision = [
    { index = "pytorch-cu124"},
]

clip4cc = { git = "https://github.com/Berkay-Ates/clip4cc" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
